@@ -30,13 +30,17 @@ DHCP6_MSG_TYPE=2
 DHCP6_TRANS_ID=0x123
 DHCP6_OP_NUM=1
 
+DHCP6_OP_CODE=14
+DHCP6_OP_LEN=0
+DHCP6_OPTION=DHCP6_RAPID_COMMIT
+
+/*
 DHCP6_OP_CODE=13
 DHCP6_OP_LEN=12
 DHCP6_OPTION=DHCP6_STATUS_CODE
 DHCP6_OP_STATUS_CODE=NOBINDING
 DHCP6_OP_STATUS_MSG=0xabcdef00010203040506
 
-/*
 DHCP6_OP_CODE=3
 DHCP6_OP_LEN=12
 DHCP6_OPTION=DHCP6_OPTION_IANA
