@@ -24,4 +24,5 @@ pgen-0.01----------------------------------------------------------------------
 	-> IANA Option added
 	-> IATA Option added
 	-> Status Code Option added
+	-> Rapid Commit Option added
 pgen-0.02----------------------------------------------------------------------
